--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
        overflow: hidden;
     }
 	</style>
-	<link rel="stylesheet" type="text/css" href="./css/index.css">
+	<link rel="stylesheet" type="text/css" href="./resume/css/index.css">
 	<script src="//at.alicdn.com/t/font_934830_b8ho6pjrc6k.js"></script>
 </head>
 <body>
