修改index.html的引入目录

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="userCard ">
 			<div class="pictrueAndText clearfix">
 				<div class="pictrue">
-					<img src="./img/pic.jpg" width=330 height=330 alt="avatar">
+					<img src="./resume/img/pic.jpg" width=330 height=330 alt="avatar">
 				</div>
 				<div class="text">
 					<span class="welcome">Hello
