--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
        vertical-align: -0.15em;
        fill: currentColor;
        overflow: hidden;
-    }
+	}
 	</style>
 	<link rel="stylesheet" type="text/css" href="./resume/css/index.css">
 	<script src="//at.alicdn.com/t/font_934830_b8ho6pjrc6k.js"></script>
@@ -17,8 +17,8 @@
 	<div class="topNavBar">
 		<div class="topNavBar-inner clearfix">
 			<a class="logo" href="#" alt="logo">
-				<span class="rs">RS</span>
-				<span>card</span>
+				<span class="rs">My</span>
+				<span>Resume</span>
 			</a>
 			<nav>
 				<ul>
@@ -89,12 +89,102 @@
 				</a>
 			</footer>
 		</div>
-
-		<a class="button" href="#">下载 PDF简历</a>
-		<p>
-			陈开伟，前端攻城狮
+		<div class="buttonWrapper">
+			<a class="button" href="./resume.pdf" target="_blank" download>下载 简历</a>
+		</div>
+		<p class="slefIntroduction">
+			您好呐，我是陈开伟，一位努力的前端攻城狮<br>
 			技能：前端开发
 		</p>
 	</main>
+	<section class="skills">
+		<h2>技能</h2>
+		<ol class="clearfix">
+			<li>
+				<h3>
+					HTML5 &amp; CSS3
+				</h3>
+				<div class="progressBar">
+					<div class="progress" style="width: 80%"></div>
+				</div>
+			</li>
+			<li>
+				<h3>
+					JavaScript
+				</h3>
+				<div class="progressBar">
+					<div class="progress" style="width: 85%"></div>
+				</div>
+			</li>
+			<li>
+				<h3>
+					React
+				</h3>
+				<div class="progressBar">
+					<div class="progress" style="width: 80%"></div>
+				</div>
+			</li>
+			<li>
+				<h3>
+					Vue
+				</h3>
+				<div class="progressBar">
+					<div class="progress" style="width: 66%"></div>
+				</div>
+			</li>
+			<li>
+				<h3>
+					jQuery
+				</h3>
+				<div class="progressBar">
+					<div class="progress" style="width: 76%"></div>
+				</div>
+			</li>
+			<li>
+				<h3>
+					Node.js
+				</h3>
+				<div class="progressBar" >
+					<div class="progress" style="width: 54%"></div>
+				</div>
+			</li>
+		</ol>
+	</section>
+	<section class="portfolio">
+		<h2>作品集</h2>
+		<nav>
+			<ol class="clearfix">
+				<li id="portfolio1">所有</li>
+				<li id="portfolio2">框架</li>
+				<li id="portfolio3">原生JS &amp; CSS</li>
+			</ol>
+			<div id="portfolioBar" class="bar state-1">
+				<div class="bar-inner"></div>
+			</div>
+		</nav>
+		<script>
+			portfolio1.onclick = function() {
+				portfolioBar.className = 'bar state-1'
+			}
+			portfolio2.onclick = function() {
+				portfolioBar.className = 'bar state-2'
+			}
+			portfolio3.onclick = function() {
+				portfolioBar.className = 'bar state-3'
+			}
+
+		</script>
+		<div class="works" style="height: 597px;">
+				<div class="big" style="top: 0; left: 0;">
+				  <img src="./resume/img/1.jpg" alt="作品1">
+				</div>
+				<div class="small" style="top: 0; left: 645px;">
+				  <img src="./resume/img/2.jpg" alt="作品2">
+				</div>
+				<div class="small" style="top: 312px; left: 645px;">
+				  <img src="./resume/img/3.jpg" alt="作品3">
+				</div>
+			  </div>		  
+	</section>
 </body>
 </html>
