修改dd,dt样式属性

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 					<h1>陈开伟</h1>
 					<p>前端开发攻城狮</p>
 					<hr>
-					<dl>
+					<dl class="clearfix">
 						<dt>年龄</dt>
 						<dd>21</dd>
 						<dt>所在城市</dt>
