--- a/index.html
+++ b/index.html
@@ -9,23 +9,90 @@
        fill: currentColor;
        overflow: hidden;
 	}
+
+	.loading {
+		width: 200px;
+		height: 200px;
+		position: relative;
+	}
+
+	.loading::before,.loading::after {
+		content: '';
+		position: absolute;
+		width: 0px;
+		height: 0px;
+		background: #000;
+		border-radius: 50%;
+		top: 0;
+		left: 0;
+		bottom: 0;
+		right: 0;
+		margin: auto;
+		animation: s 1.5s linear infinite;
+	}
+	
+	.loading::after {
+		animation-delay: 0.75s;
+	}
+
+	@keyframes s {
+		0% {
+			width:  0px;
+			height: 0px;
+			opacity: 1;
+		}
+		100% {
+			width: 100px;
+			height: 100px;
+			opacity: 0;
+		}
+	}
+
+	.site-welcome {
+		display: none;
+		position: fixed;
+		top: 0; left: 0; width: 100%; height: 100%;
+		background: #888;
+		z-index: 1;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.site-welcome.active {
+		display: flex;
+	}
 	</style>
 	<link rel="stylesheet" type="text/css" href="./resume/css/index.css">
 	<script src="//at.alicdn.com/t/font_934830_b8ho6pjrc6k.js"></script>
 </head>
 <body>
-	<div class="topNavBar">
+	<div id="siteWelcome" class="site-welcome active">
+		<div class="loading"></div>
+	</div>
+	<div id="topNavBar" class="topNavBar">
 		<div class="topNavBar-inner clearfix">
 			<a class="logo" href="#" alt="logo">
 				<span class="rs">My</span>
 				<span>Resume</span>
 			</a>
-			<nav>
-				<ul>
-					<li><a href="#">关于</a></li>
-					<li><a href="#">技能</a></li>
-					<li><a href="#">作品</a></li>
-					<li><a href="#">博客</a></li>
+			<nav class="menu">
+				<ul class="clearfix">
+					<li><a href="#siteAbout">关于</a></li>
+					<li><a href="#siteSkills">技能</a></li>
+					<li><a href="#siteWorks">作品</a>
+						<ul class="submenu">
+							<li>作品1</li>
+							<li>作品2</li>
+							<li>作品3</li>
+						</ul>
+					</li>
+					<li><a href="#">博客</a>
+						<ul class="submenu">
+							<li>博客1</li>
+							<li>博客2</li>
+							<li>博客3</li>
+						</ul>
+					</li>
 					<li><a href="#">日历</a></li>
 					<li><a href="#">联系方式</a></li>
 					<li><a href="#">其他</a></li>
@@ -37,7 +104,7 @@
 		<div class="mask"></div>
 	</div>
 	<main>
-		<div class="userCard ">
+		<div id="siteAbout" class="userCard">
 			<div class="pictrueAndText clearfix">
 				<div class="pictrue">
 					<img src="./resume/img/pic.jpg" width=330 height=330 alt="avatar">
@@ -97,7 +164,7 @@
 			技能：前端开发
 		</p>
 	</main>
-	<section class="skills">
+	<section id="siteSkills" class="skills">
 		<h2>技能</h2>
 		<ol class="clearfix">
 			<li>
@@ -150,7 +217,7 @@
 			</li>
 		</ol>
 	</section>
-	<section class="portfolio">
+	<section id="siteWorks" class="portfolio">
 		<h2>作品集</h2>
 		<nav>
 			<ol class="clearfix">
@@ -186,5 +253,39 @@
 				</div>
 			  </div>		  
 	</section>
+<script>
+	setTimeout(function() {
+      siteWelcome.classList.remove('active');
+    },1500);
+
+	window.onscroll = function(xxx) {
+		if(window.scrollY > 0) {
+			topNavBar.classList.add('sticky');
+		} else {
+			topNavBar.classList.remove('sticky');
+		}
+	}
+	let liTags = document.querySelectorAll('nav.menu > ul > li');
+	for(let i = 0; i < liTags.length; i++) {
+		liTags[i].onmouseenter = function(x) {
+			x.currentTarget.classList.add('active');
+		}
+		liTags[i].onmouseleave = function(x) {
+			x.currentTarget.classList.remove('active');
+		}
+	}
+
+	letaTags = document.querySelectorAll('nav.menu > ul > li > a');
+	for(let i = 0; i < aTags.length; i++) {
+		aTags[i].onclick = function(x) {
+			x.preventDefault();
+			let a = x.currentTarget;
+			let href = a.getAttribute('href') // '#siteAbout'
+			let element = document.querySelector(href);
+			let top = element.offsetTop
+			window.scroolTo(0, top - 80);
+		}
+	}
+</script>
 </body>
 </html>
