--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
 </head>
 <body>
-	<div id="siteWelcome" class="site-welcome active">
+	<!-- 开始的Loading动画 -->
+	<!-- <div id="siteWelcome" class="site-welcome active">
 		<div class="loading"></div>
-	</div>
+	</div> -->
 	<div id="topNavBar" class="topNavBar">
 		<div class="topNavBar-inner clearfix">
 			<a class="logo" href="#" alt="logo">
@@ -105,7 +106,7 @@
 		<div class="mask"></div>
 	</div>
 	<main>
-		<div id="siteAbout" class="userCard">
+		<div data-x id="siteAbout" class="userCard">
 			<div class="pictrueAndText clearfix">
 				<div class="pictrue">
 					<img src="./resume/img/pic.jpg" width=330 height=330 alt="avatar">
@@ -165,7 +166,7 @@
 			技能：前端开发
 		</p>
 	</main>
-	<section id="siteSkills" class="skills">
+	<section data-x id="siteSkills" class="skills">
 		<h2>技能</h2>
 		<ol class="clearfix">
 			<li>
@@ -218,7 +219,7 @@
 			</li>
 		</ol>
 	</section>
-	<section id="siteWorks" class="portfolio">
+	<section data-x id="siteWorks" class="portfolio">
 		<h2>作品集</h2>
 		<nav>
 			<ol class="clearfix">
@@ -255,17 +256,45 @@
 			  </div>		  
 	</section>
 <script>
-	setTimeout(function() {
-      siteWelcome.classList.remove('active');
-    },1500);
+	// 开场Loding动画
+	// setTimeout(function() {
+    //   siteWelcome.classList.remove('active');
+    // },1500);
+	let specialTags = document.querySelectorAll('[data-x]');
+	for(let i = 0; i < specialTags.length; i++) {
+		specialTags[i].classList.add('offset');
+	}
 
+	findClosest();
 	window.onscroll = function(xxx) {
 		if(window.scrollY > 0) {
 			topNavBar.classList.add('sticky');
 		} else {
 			topNavBar.classList.remove('sticky');
 		}
+		findClosest();
 	}
+
+	function findClosest() {
+		let specialTags = document.querySelectorAll('[data-x]');
+		let minIndex = 0;
+		for(let i = 0; i < specialTags.length; i++) {
+			if(Math.abs(specialTags[i].offsetTop - window.scrollY) < Math.abs(specialTags[minIndex].offsetTop - window.scrollY)) {
+				minIndex = i;
+			}
+		}
+		// minIndex 就是距离窗口顶部最近的元素
+		specialTags[minIndex].classList.remove('offset');
+		let id = specialTags[minIndex].id;
+		let a = document.querySelector('a[href="#' + id + '"]');
+		let li = a.parentNode;
+		let brotherAndMe = li.parentNode.children;
+		for(let i = 0; i < brotherAndMe.length; i++) {
+			brotherAndMe[i].classList.remove('highlight');
+		}
+		li.classList.add('highlight');
+	}
+
 	let liTags = document.querySelectorAll('nav.menu > ul > li');
 	for(let i = 0; i < liTags.length; i++) {
 		liTags[i].onmouseenter = function(x) {
