--- a/index.html
+++ b/index.html
@@ -176,6 +176,20 @@
 			<div class="swiper-button-next"></div>
 		</div>
 	</section>
+	<section class="message">
+		<h2>留言</h2>
+		<ol id="messageList">
+	
+		</ol>
+	</section>
+	<form action="" id="postMessageForm" style="width: 700px; margin: 50px auto">
+		<label for="name">用户名：</label>
+		<input type="text" name="name" id="name">
+		<label for="content">内容：</label>
+		<input type="text" name="content" id="content">
+		<input type="submit" value="提交">
+	</form>
+<script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.11.1/dist/av-min.js"></script>
 <script src="//at.alicdn.com/t/font_934830_b8ho6pjrc6k.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/js/swiper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
@@ -184,5 +198,6 @@
 <script src="./js/auto_slide_up.js"></script>
 <script src="./js/sticky-topbar.js"></script>
 <script src="./js/smoothly_navigation.js"></script>
+<script src="./js/message.js"></script>
 </body>
 </html>
