--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
 		<ol id="messageList">
 	
 		</ol>
+		<form id="postMessageForm" style="width: 700px; margin: 50px auto;">
+			<label for="">姓名</label>
+			<input type="text" name="name">
+			<label for="">内容</label>
+			<input type="text" name="content">
+			<input type="submit" value="提交">
+		</form>
 	</section>
-	<form action="" id="postMessageForm" style="width: 700px; margin: 50px auto">
-		<label for="name">用户名：</label>
-		<input type="text" name="name" id="name">
-		<label for="content">内容：</label>
-		<input type="text" name="content" id="content">
-		<input type="submit" value="提交">
-	</form>
 <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.11.1/dist/av-min.js"></script>
 <script src="//at.alicdn.com/t/font_934830_b8ho6pjrc6k.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.6/js/swiper.min.js"></script>
