--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
 	
 		</ol>
 		<form id="postMessageForm" style="width: 700px; margin: 50px auto;">
-			<label for="">姓名</label>
-			<input type="text" name="name">
-			<label for="">内容</label>
+			<label for="name">姓名：</label>
+			<input type="text" name="name" id="name">
+			<label for="content">内容：</label>
 			<input type="text" name="content">
-			<input type="submit" value="提交">
+			<input type="submit" value="提交" id="content">
 		</form>
 	</section>
 <script src="//cdn.jsdelivr.net/npm/leancloud-storage@3.11.1/dist/av-min.js"></script>
